--- a/PB.ipynb
+++ b/PB.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "4  20140105      1"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -191,26 +191,280 @@
        "4  1/5/2014      1"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dff = df.copy()\n",
-    "dff['date'] = list(map(lambda s: transfer_date(s), df['date']))\n",
-    "dff.head()"
+    "df['date'] = list(map(lambda s: transfer_date(s), df['date']))\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dff.set_index('date', inplace=True)\n",
-    "dff.to_csv('output/PB/daily.csv')"
+    "event_dates = [\n",
+    "    '1/10/2014',\n",
+    "    '2/11/2014',\n",
+    "    '2/27/2014',\n",
+    "    '3/10/2014',\n",
+    "    '3/25/2014',\n",
+    "    '4/22/2014',\n",
+    "    '5/5/2014',\n",
+    "    '6/20/2014',\n",
+    "    '7/14/2014',\n",
+    "    '8/7/2014',\n",
+    "    '9/28/2014',\n",
+    "    '10/8/2014',\n",
+    "    '11/24/2014',\n",
+    "    '12/19/2014',\n",
+    "    '1/22/2016',\n",
+    "    '2/1/2016',\n",
+    "    '3/30/2016',\n",
+    "    '4/13/2016',\n",
+    "    '5/4/2016',\n",
+    "    '6/30/2016',\n",
+    "    '7/12/2016',\n",
+    "    '7/13/2016',\n",
+    "    '8/15/2016',\n",
+    "    '9/15/2016',\n",
+    "    '10/28/2016',\n",
+    "    '11/24/2016',\n",
+    "    '11/25/2016',\n",
+    "    '12/8/2016',\n",
+    "    '12/11/2016',\n",
+    "    '1/5/2018',\n",
+    "    '1/11/2018',\n",
+    "    '2/28/2018',\n",
+    "    '3/8/2018',\n",
+    "    '4/29/2018',\n",
+    "    '5/2/2018',\n",
+    "    '5/15/2018',\n",
+    "    '6/18/2018',\n",
+    "    '6/22/2018',\n",
+    "    '7/6/2018',\n",
+    "    '7/11/2018',\n",
+    "    '7/26/2018',\n",
+    "    '8/2/2018',\n",
+    "    '9/4/2018',\n",
+    "    '10/31/2018',\n",
+    "    '11/10/2018',\n",
+    "    '11/23/2018',\n",
+    "    '12/10/2018',\n",
+    "    '12/19/2018'\n",
+    "]\n",
+    "\n",
+    "df['size'] = 0"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>count</th>\n",
+       "      <th>size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1/1/2014</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1/2/2014</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1/3/2014</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1/4/2014</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1/5/2014</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1/6/2014</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1/7/2014</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1/8/2014</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1/9/2014</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1/10/2014</td>\n",
+       "      <td>54</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        date  count  size\n",
+       "0   1/1/2014      1     0\n",
+       "1   1/2/2014      0     0\n",
+       "2   1/3/2014      0     0\n",
+       "3   1/4/2014      0     0\n",
+       "4   1/5/2014      1     0\n",
+       "5   1/6/2014      0     0\n",
+       "6   1/7/2014      0     0\n",
+       "7   1/8/2014      1     0\n",
+       "8   1/9/2014      2     0\n",
+       "9  1/10/2014     54    54"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for i, row in df.iterrows():\n",
+    "    if row['date'] in event_dates:\n",
+    "        df.iloc[[i],[2]] = row['count']\n",
+    "        \n",
+    "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.set_index('date', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['description'] = ''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('output/PB/daily.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Anual count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def transfer_date2(string):\n",
+    "    month = int(string[4:6])\n",
+    "    day = int(string[6:])\n",
+    "    return '/'.join([str(month), str(day)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = sqlite3.connect('dpc.db')\n",
+    "df = pd.DataFrame()\n",
+    "df = pd.read_sql('SELECT * FROM count_tweets_daily WHERE date like \"2018%\"', conn)\n",
+    "df['date'] = list(map(lambda s: transfer_date(s), df['date']))\n",
+    "df.set_index('date', inplace=True)\n",
+    "df.columns = ['Year 2018']\n",
+    "\n",
+    "for year in range(2014, 2018):\n",
+    "    y = str(year)\n",
+    "    dft = pd.read_sql('SELECT * FROM count_tweets_daily WHERE date like \"'+y+'%\" AND date <> \"20160229\"', conn)\n",
+    "    df['Year '+y] = list(dft['count'])\n",
+    "\n",
+    "df.to_csv('output/PB/cmp.csv')\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
